[package]
name = "minnowflux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["blocking"] }
rpassword = "7.2.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
